'Fixed' overflow

--- a/frontend/html/styles.css
+++ b/frontend/html/styles.css
@@ -29,7 +29,6 @@ body {
 @media only screen and (min-width: 600px) {
 	.message-container {
 		max-width: 700px;
-	
 	}
 }
 
@@ -39,6 +38,7 @@ body {
 	border: 1px solid lightgrey;
 	border-radius: 10px;
 	padding: 20px;
+	overflow: auto;
 }
 
 .role-hint-container {
